--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -5,28 +6,28 @@
 
 html, body {
     height: 100%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
+    background-color: #f5f5f7;
 }
 
 #container {
     display: flex;
-    background-color: black;
+    background-color: #f5f5f7;
     height: 100%;
     align-items: center;
     flex-direction: column;
 }
 
 header {
-    border-bottom: 1 px solid rgb(58, 58, 60);
+    border-bottom: 1px solid #d3d3d3;
 }
 
 .title {
-    color: gainsboro;
+    color: #333333;
     font-size: 2.5rem;
     font-weight: bold;
-    margin: 0.4rem 0 0.4rem 0;
+    margin: 0.4rem 0;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #board-container {
@@ -34,7 +35,6 @@ header {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-    overflow: hidden;
 }
 
 #board {
@@ -46,39 +46,38 @@ header {
 }
 
 .square {
-    border: 2px solid rgb(58, 58, 60);
+    border: 2px solid #d3d3d3;
     min-width: 60px;
     min-height: 60px;
     font-size: 50px;
     font-weight: bold;
-    color: gainsboro;
-    text-transform: uppercase;
+    color: #d3d3d3;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 #keyboard-container {
-    height: 200px ;
+    height: 200px;
 }
 
 .keyboard-row {
     display: flex;
     justify-content: center;
     width: 100%;
-    margin: auto 0 8px ;
-    touch-action: manipulation ;
+    margin: auto 0 8px;
 }
 
 .keyboard-row button {
     font-family: inherit;
     font-weight: bold;
-    border: 0;
+    border: 1px solid #d3d3d3;
     padding: 0;
     height: 58px;
     cursor: pointer;
-    background-color: rgb(129, 131, 132);
-    color: rgb(215, 218, 220);
+    background-color: #e0e0e0;
+    color: #333333;
     flex-grow: 1;
     text-transform: uppercase;
     margin-right: 6px;
@@ -101,3 +100,109 @@ header {
     display: flex;
     flex-direction: column;
 }
+
+ * {
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Helvetica Neue', sans-serif;
+    background-color: #f5f5f7;
+}
+
+#container {
+    display: flex;
+    background-color: #f5f5f7;
+    height: 100%;
+    align-items: center;
+    flex-direction: column;
+    color: #333333;
+}
+
+header {
+    border-bottom: 1px solid #d3d3d3;
+}
+
+.title {
+    color: #333333;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin: 0.4rem 0;
+    text-align: center;
+}
+
+#board-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+#board {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.square {
+    border: 2px solid #d3d3d3;
+    min-width: 60px;
+    min-height: 60px;
+    font-size: 50px;
+    font-weight: bold;
+    color: #333333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+
+#keyboard-container {
+    height: 200px;
+}
+
+.keyboard-row {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: auto 0 8px;
+}
+
+.keyboard-row button {
+    font-family: inherit;
+    font-weight: bold;
+    border: 1px solid #d3d3d3;
+    padding: 0;
+    height: 58px;
+    cursor: pointer;
+    background-color: #e0e0e0;
+    color: #333333;
+    flex-grow: 1;
+    text-transform: uppercase;
+    margin-right: 6px;
+    border-radius: 4px;
+    user-select: none;
+}
+
+.keyboard-row button.wide-button {
+    flex-grow: 1.5;
+}
+
+.spacer-half {
+    flex-grow: 0.5;
+}
+
+#game {
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.white-text { color: white; }
