--- a/css/styles.css
+++ b/css/styles.css
@@ -206,3 +206,37 @@ header {
 
 
 .white-text { color: white; }
+
+header {
+    border-bottom: 1px solid #d3d3d3;
+    display: flex; /* Make header a flex container */
+    justify-content: space-between; /* Space between the title and the button */
+    align-items: center; /* Align items vertically */
+    padding: 0 20px; /* Add some padding on the left and right */
+}
+
+.title {
+    color: #333333;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin: 0.4rem 0;
+}
+
+.reload-icon {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 24px; /* Adjust size as needed */
+    padding: 5px;
+    border-radius: 50%;
+    transition: transform 0.3s;
+}
+
+.reload-icon:hover {
+    transform: rotate(360deg);
+}
+
+#reloadButton{
+    background-color: #f5f5f7;
+    ;
+}
