--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,13 @@ header {
 .title {
     color: #333333;
     font-size: 2.5rem;
-    font-weight: bold;
     margin: 0.4rem 0;
     text-align: center;
-    width: 100%;
-    padding-left: 100px;
+    width: 130%;
+    padding-left: 150px;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 1px !important;
+    font-weight: 700;
 }
 
 #board-container, #board {
@@ -128,10 +130,14 @@ header {
 
 #word {
     margin-right: 15px;
-    font-size: 25px;
+    font-size: 15px;
     padding-right: 5px;
     padding-left: 5px;
     border-radius: 7px;
     background-color: #B7D1E2;
+    width: 120px;
+    height: 30px;
+    font-family: 'Helvetica-Nue';
+    font-weight: 800;
 
 }
