--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
 html, body {
     height: 100%;
-    /* width: 100%; */
+    width: 100%;
     font-family: 'Helvetica Neue', sans-serif;
     background-color: white;
 }
@@ -140,4 +140,27 @@ header {
     font-family: 'Helvetica-Nue';
     font-weight: 800;
 
+} 
+
+/* IMPROVED CSS FOR MOBILE WEB */
+
+
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .title {
+        font-size: 5vw;
+    }
+
+    .square {
+        width: 18vw;
+        height: 18vw;
+        font-size: 4vw;
+    }
+
+    .keyboard-row button {
+        height: 12vw;
+        font-size: 4vw;
+    }
 }
+
