--- a/css/styles.css
+++ b/css/styles.css
@@ -160,10 +160,16 @@ header {
     }
 
     .keyboard-row button {
-        width: 9%; /* Assuming there are 10 buttons in a row, adjust as needed */
+        width: 15%; /* Assuming there are 10 buttons in a row, adjust as needed */
         height: auto; /* Scales the height automatically based on the width */
         padding: 1vw; /* Provides padding that scales with the viewport width */
         font-size: 3vw; /* Scales the button text based on viewport width */
+        color: black;
+    }
+
+    #word {
+        width: 30%;
+        font-size: 2vw;
     }
 
     /* You can add additional styling for other elements as needed to maintain the aspect ratio */
